Support --classify option
To support classification, the basic storategy is completely changed and
also I changed some option names.

The code have not tested yet.

--- a/src/txt2xls/conf/confspec.cfg
+++ b/src/txt2xls/conf/confspec.cfg
@@ -6,16 +6,22 @@ raise_exception = boolean(default=False)
 parser = string(default='parsers.PlainParser')
 loader = string(default='loaders.PlainLoader')
 using = int_list(min=2, max=2, default=list(0,1))
-auto_unite = boolean(default=False)
+
+unite = boolean(default=False)
+unite_function = string(default=None)
 unite_basecolumn = integer(min=0, default=0)
+
+classify = boolean(default=False)
+classify_function = string(default=None)
 
 [filters]
 relative = boolean(default=False)
 relative_origin = integer(min=0, default=0)
 relative_basecolumn = integer(min=0, default=1)
+
 baseline = boolean(default=False)
-baseline_column = integer(min=0, default=1)
 baseline_function = string(default='columns[column][0]')
+baseline_basecolumn = integer(min=0, default=1)
 
 [plot]
 xlabel = string(default='X')
