--- a/.coveragerc
+++ b/.coveragerc
@@ -2,6 +2,8 @@
 include =
     src/*.py
     tests/*.py
+omit =
+    src/txt2xls/compat.py
 exclude_lines =
     pragma: no cover
     if __name__ == .__main__.:
