--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include README.rst
 include requirements.txt
 include requirements-test.txt
 include requirements-docs.txt
-include src/txt2xls/conf/confspec.cfg
+include src/txt2xls/config.spec
