--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ include requirements.txt
 include requirements-test.txt
 include requirements-docs.txt
 include src/txt2xls/config.spec
+include txt2xls.1
