Add make command to the whitelist_externals

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ commands=nosetests []
 basepython=python
 changedir=docs
 deps=-rrequirements-docs.txt
+whitelist_externals=
+    make
 commands=
     make clean
     make html
